FIX THE GRID OVERFLOW
Eliminated the overflow by changing the box-sizing to border box,
which includes the border and padding to the specified width.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 #gridContainer {
     display: flex;
     flex-flow: row wrap;
+    box-sizing: border-box;
     padding: 10px;
     border: 2px solid red;
     background-color: beige;
@@ -17,6 +18,7 @@ body {
 #gridContainer > div {
     flex: 1 1 auto;
     text-align: center;
+    box-sizing: border-box;
     border: 2px solid black;
     color: white;
     background-color: green;
